CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
CMAKE_POLICY(SET CMP0079 NEW)

PROJECT(Barebones VERSION 0.1)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

ADD_SUBDIRECTORY(Sources)

ENABLE_TESTING()
FUNCTION(DO_TEST TEST_NAME TEST_RESULT)
  ADD_TEST(NAME ${TEST_NAME} COMMAND ${PROJECT_NAME} --file ../Examples/${TEST_NAME}.bb)
  SET_TESTS_PROPERTIES(${TEST_NAME} PROPERTIES PASS_REGULAR_EXPRESSION ${TEST_RESULT})
ENDFUNCTION(DO_TEST)

DO_TEST(0_SquareX   "X = 7\nZ = 49")
DO_TEST(1_PrefixSum "N = 7\nZ = 28")
DO_TEST(2_Modulo    "X = 11\nY = 7\nZ = 4")
DO_TEST(3_Parity_0  "X = 7\nZ = 1")
DO_TEST(3_Parity_1  "X = 7\nZ = 1")

